[package]
name = "naptd"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
description = "User mode NAT-PT service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0.1"
packet = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.3"
